Fixes event loop bug. Credit goes to Dirk.

BUG: 108312
BUG: 148700
BUG: 143003
BUG: 136365
BUG: 90467

Most probably closed:
BUG: 143776
BUG: 147016
BUG: 137279
BUG: 136413

https://bugzilla.novell.com/show_bug.cgi?id=226462

svn path=/branches/KDE/3.5/kdepim/; revision=699554